[build-system]
requires = ["poetry-core>=1.8.0", "wheel",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "convergent-manufacturing-utils"
version = "0.1.0"
description = "Convergent Manufacturing (Motoman) Helper Functions."

packages = [
    { include = "result_analysis", from = "src" },
    { include = "traj_manipulation", from = "src" },
    { include = "WeldSend", from = "src" },
    { include = "motoman_def", from = "src" },
    { include = "weldRRSensor", from = "src" }
]

authors = ["Honglu He <heh6@rpi.edu>",]
maintainers = ["Honglu He <heh6@rpi.edu>",]

include = ["CHANGELOG.md", "LICENSE", "py.typed",]
license = "BSD-3-Clause"
readme = "README.md"

repository = "https://github.com/hehonglu123/convergent_manufacturing_utils"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "<2.0.0"
general_robotics_toolbox = "^0.7.2"
scipy = "^1.9.2"
pyyaml = "^6.0.1"
RobotRaconteur = "^1.2.1.post1"
